--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,245 @@
-h1{
-    color: red;
+/*------------------------------
+共通
+-------------------------------*/
+img{
+    max-width: 100%;
+    border:1px solid #d8d8d8
+}
+
+.title{
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 h2{
-    color: blue;
+    color:rgb(13, 44, 21);
+    font-size: 50px;
+    border-bottom:1px solid #dee7ec;
+    letter-spacing: 5px;
 }
 
-h3{
-    color: green
+a{
+    text-decoration: none;
+    color:#333333;
 }
+
+h1{
+    margin: 0;
+    letter-spacing:4px;
+}
+
+
+/*------------------------------
+header  
+-------------------------------*/
+
+.header{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    align-items: center;
+    padding:16px 0;
+}
+
+.header-right{
+    margin-left:auto;
+    padding:10px 30px 0 0;
+}
+
+.header-right .fa-brands{
+    color :black;
+    padding:0 5px;
+    opacity: 0.7;
+}
+
+.header-right .fa-brands:hover{
+    opacity: 1;
+}
+
+.header_menu{
+    font-size: 20px;
+    display: flex;
+    justify-content: flex-end;
+    letter-spacing: 3px;
+}
+
+.header_menu li:hover{
+    text-decoration: underline;
+
+}
+
+
+
+
+ul{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    margin: 0;
+}
+
+li{ 
+    padding: 16px;
+    text-align: center;
+}
+
+li a{
+    color:black;
+    text-decoration: none;
+}
+
+@media screen and (max-width:768px){
+h1{
+    padding: 16px 0;
+}
+
+    .header_menu{
+        width: 100%;
+    }
+
+    ul{
+    padding:0;
+    }
+
+    li {
+    width: 50%;
+    border: 1px solid #d8d8d8;
+    }
+}
+
+/*------------------------------
+about
+-------------------------------*/
+#about{
+    margin-top: 50px;
+}
+
+.about_area{
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.about_area-img{
+    
+    width:45%;
+}
+
+.about_area-decription{
+    width: 50%;
+    margin:20px;
+    padding:0;  
+}
+
+.about_area_decription-icon{
+    display: flex;
+    justify-content: space-around;
+    padding-top:16px;
+}
+
+#about dt,dd{
+    font-size: 15px;
+    padding: 5px;
+    
+} 
+
+dl {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  dt {
+    width: 30%;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+    /*background-color: #DADADA;*/
+  }
+  
+  dd {
+    width: 70%;
+    /*padding-bottom: 10px;*/
+    /*background-color: #F3F3F3;*/
+    margin-bottom: 10px;
+  }
+
+
+
+@media screen and (max-width:768px){
+    .about_area-img{
+        width:100%;
+    }
+    .about_area-decription{
+        width: 100%;
+    }
+}
+
+/*------------------------------
+Skill
+-------------------------------*/
+#skill{
+    margin-top: 50px;
+}
+
+#skill h3{
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.skill-icon{
+    text-align: center;
+    font-size: 70px;
+    margin-bottom: 40px;
+}
+
+.text{
+    margin: 0 auto;
+}
+
+/*------------------------------
+works
+-------------------------------*/
+#works{
+    margin-top: 50px;
+}
+
+.img_wrap img{
+    width: 100%;
+    cursor: pointer;
+    transition-duration: 0.3s;
+  }
+  .img_wrap:hover img{
+    opacity: 0.6;
+    transition-duration: 0.3s;
+  }
+
+/*------------------------------
+more
+-------------------------------*/
+#more{
+    margin-top: 50px;
+}
+
+#more img{
+    margin-bottom: 40px;
+}
+
+#more p{
+    font-weight:bold;
+    font-size: 20px;
+    text-align: center;
+    font-family: fantasy;
+    margin-bottom: 0;
+}
+
+/*------------------------------
+footer
+-------------------------------*/
+footer{
+    text-align: center;
+    border-top:1px solid #dee7ec;
+}
+
 
